# SideProject1-BackEnd

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README-BE-001-2-3-5.md  README-BE-001.md  README.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
app/: main.py
app/api/v1/: admin.py  auth.py  cv_admin.py  cv_storage.py  jd_upload.py  jobs.py  textract.py  upload.py
app/core/: config.py  database.py  security.py
app/middleware/: logging.py  rate_limit.py
app/models/: cv.py  cv_storage.py  job.py  otp.py  user.py
app/repositories/: cv_storage.py  job_match.py  user.py
app/schemas/: cv.py  job.py  responses.py  user.py
app/services/: analytics_data_parser.py  auth_service.py  cv_content_parser.py  cv_storage.py  data_validation_parser.py  email.py  google_auth.py  job_description_parser.py  job_filter.py  s3.py  search_query_parser.py  textract.py  upload.py
app/services/ai/: info_extractor.py  s3_utils.py  similarity.ipynb
app/utils/: helpers.py  logger.py  rate_limit.py  validators.py
scripts/: backup_data.py  check_dependencies.py  cleanup.py  cv_jd_extract.ipynb  health_check.py  init_project.py  migrate_data.py  performance_test.py  restore_data.py  security_scan.py  setup_db.py  test_auth_api.py  validate_config.py
tests/: conftest.py  test_auth.py  test_cv_models.py  test_jwt_and_auth.py  test_password_reset.py  test_repository_gsi.py  test_validators.py
tests/fixtures/: user_data.py
